# MSGseqTK

./: .gitignore  .gitmodules  BAM.cpp  BAM.h  BAM_test.cpp  GFF.h  HTSindex.h  Makefile  Makefile.am  Makefile.in  NEWS  ProgLog.cpp  README  README.md  SAMfile.h  SeedChain_test.cpp  StringUtils.cpp  StringUtils.h  TSVRecord.cpp  TSVRecord.h  TSVScanner.h  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
SAMtools/: BAM.cpp  BAM.h  BAMheader.cpp  BAMheader.h  HTSindex.cpp  HTSindex.h  Makefile.am  Makefile.in  SAMfile.cpp  SAMfile.h
UCSC/: GFF.cpp  GFF.h  GFF3.cpp  GFF3.h  GFF_test.cpp  GTF.cpp  GTF.h  Makefile.am  Makefile.in
exampleProgram/: Makefile.am
examples/: Makefile  Makefile.am  Makefile.in  bwt64.c  hello.c  sasearch64.c  unbwt.c  unbwt64.c
include/: BitSeq.h  BitSeqGGMN.h  BitSeqRRR.h  BitStr.h  Makefile.in  Mapper.h  Seq.h  WaveletTreeRRR.h  divsufsort_private.h  libsds.h  libsdsBitBasic.h  libsdsConst.h
lib/: Makefile  Makefile.am  utils.c
src/: .gitignore  Alignment.cpp  Alignment.h  AlignmentSE.cpp  AlignmentSE.h  BitSeq.cpp  BitSeqGGMN.cpp  BitSeqRRR.cpp  BitStr.cpp  DNAalphabet.cpp  DNAalphabet.h  DNAseq.cpp  DNAseq.h  FMDIndex.cpp  FMDIndex.h  FMIndex.cpp  FMIndex.h  GLoc.cpp  GLoc.h  Genome.cpp  Genome.h  GenomeAnno.cpp  GenomeAnno.h  GenomeAnno_test.cpp  Loc.cpp  Loc.h  MEM.cpp  MEM.h  MEMS.cpp  MEMS.h  MSGseqClean.h  MSGseqCleanConst.h  MSGseqCleanEnv.cpp  MSGseqTK.h  MSGseqTKConst.h  MSGseqTKEnv.cpp  MSGseqTKEnv.h  MSGseqTK_main.cpp  MSGseqTK_main.h  Makefile  (+42 more)
src/SAMtools/: .gitignore  BAM.cpp  BAM.h  BAMheader.h  Makefile  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
src/SAMtools/test/: Makefile  Makefile.am  Makefile.in  SAMtools_test.cpp
src/libdivsufsort/: .gitignore  Makefile  Makefile.in  config.h  config.h.in  configure  configure.ac
src/libdivsufsort/examples/: .gitignore  Makefile  Makefile.am  Makefile.in  mksary64.c  suftest64.c
src/libdivsufsort/include/: Makefile
src/libdivsufsort/lib/: Makefile  Makefile.am  Makefile.in  divsufsort.c  sssort.c  trsort.c  utils.c
src/libsds/: .gitignore  AUTHORS  Makefile  Makefile.in  aclocal.m4  configure  configure.ac  libtool
src/libsds/examples/: Makefile  Makefile.am  Makefile.in  hello.cpp
src/libsds/include/: BitSeq.h  BitSeqGGMN.h  BitSeqRRR.h  BitStr.h  Makefile  Makefile.am  Makefile.in  Seq.h  WaveletTreeRRR.h  libsdsBitBasic.h  libsdsConst.h
src/libsds/src/: BitSeq.cpp  BitSeqGGMN.cpp  BitSeqRRR.cpp  Makefile  Makefile.am  Makefile.in  Seq.cpp  WaveletTreeRRR.cpp
src/libsds/test/: BitSeqGGMN_test.cpp  BitStr_test.cpp  Makefile  Makefile.am  Makefile.in
src/math/: .gitignore  Makefile  aclocal.m4  configure  configure.ac
src/util/: .gitignore  BAMheader_test.cpp  CommandOptions.cpp  CommandOptions.h  GFF.h  Makefile  Makefile.am  Makefile.in  SAMfile_test.cpp  StringUtils.cpp  StringUtils.h  TSVRecord.h  aclocal.m4  config.h  config.h.in  configure  configure.ac  libtool
src/util/SAMtools/: BAM.cpp  BAM.h  BAMheader.cpp  EGSAMtools.h  Makefile.in
src/util/UCSC/: EGUCSC.h  GFF.cpp  GFF.h  Makefile  Makefile.in
src/util/test/: GFF_test.cpp  Makefile  Makefile.am  Makefile.in  SAMtools_test.cpp  StringUtils_test.cpp
test/: .gitignore  AlignmentSE_test.cpp  Alignment_test.cpp  BitSeqGGMN_test.cpp  BitSeqRRR_test.cpp  BitStr_test.cpp  DNAseq_test.cpp  FMDIndex_test.cpp  FMIndex_test.cpp  GFF_test.cpp  GenomeAnno_test.cpp  Genome_test.cpp  MEM_test.cpp  Makefile  Makefile.am  Makefile.in  MetaGenomeAnno_test.cpp  PrimarySeq_test.cpp  RFMIndex_test.cpp  SAMtools_test.cpp  SMEMCHAIN_test.cpp  SMEM_test.cpp  SeedChain_test.cpp  SeqIO_test.cpp  WaveletTreeRRR_test.cpp
