#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib
lib_LTLIBRARIES = libsds.la

#######################################
# Build information for each library

# Sources for libsds
libsds_la_SOURCES = libsds.c

# Linker options libTestProgram
libsds_la_LDFLAGS = 

# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libsds_la_CPPFLAGS = -I$(top_srcdir)/include

